apps/traefik-dashboard/overlays/test/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: traefik-dashboard
    namespace: traefik
spec:
    rules:
        - host: traefik.test.truxonline.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: traefik
                            port:
                                name: traefik
