apps/traefik-dashboard/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-redirect
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: traefik-traefik-dashboard-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.test.truxonline.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: traefik-internal
                port:
                  name: web
